# agentcache

./: .clineskills  .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  EPIC.md  INSTALL_FOR_AGENTS.md  README.md  ROADMAP.md  SPIKE.md  UBIQUITOUS_LANGUAGE.md  agentcache.md  agentmemory.md  automation.tml  docker-compose.yml  implementation_plan.md  issues.md  product_roadmap.md  push_local_data.py  push_second_brain.py  pyproject.toml  questions.md  requirements.txt  scratch_diff.txt  scratch_test_import.py  setup-venv.ps1  start.sh  sync.py
.github/: dependabot.yml
.github/workflows/: automation.yml  ci.yml  publish.yml
.kiro/skills/to-tickets/: SKILL.md
.kiro/specs/dedup-and-dashboard-fixes/: design.md  requirements.md  tasks.md
.playwright-mcp/: page-2026-06-08T23-28-16-016Z.yml  page-2026-06-09T00-16-38-317Z.yml  page-2026-06-09T06-25-46-768Z.yml  page-2026-06-09T06-26-59-609Z.yml  page-2026-06-09T06-27-14-267Z.yml
agentcache.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: publishing_roadmap.md
docs/migration/: migrate_dolt_to_sqlite.py
examples/: antigravity_sync.py
hooks/: claude-code-hook.sh  cursor-hook.js  powershell-hook.ps1
plugin/: .mcp.copilot.json  .mcp.json  CLAUDE.md  antigravity.md  plugin.json
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/hooks/: hooks.codex.json  hooks.copilot.json  hooks.json
plugin/scripts/: auto_log.py  auto_log_prompt.py  auto_session_start.py  hook_utils.py  mcp_stdio.py  notification.py  post_tool_failure.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  prompt_submit.py  session_end.py  session_start.py  simple_test_hook.py  stop.py  subagent_start.py  subagent_stop.py  task_completed.py
src/: app.py  auth.md  cli.py  connect.py  db.py  functions.py  import_data.py  mcp_stdio.py  replay_import.py  search.py  viewer_helpers.py  workers.py
src/agentcache/: __init__.py  app.py  cli.py  connect.py  core.py  db.py  functions.py  import_data.py  legacy.py  mcp_stdio.py  replay_import.py  search.py  viewer_helpers.py  workers.py
src/agentcache.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/agentcache/cache/: graph.py  (+6 more)
src/cache/: __init__.py  graph.py  health.py  observe.py  timeline.py
src/memory/: __init__.py  context.py  observe.py  remember.py
src/routes/: __init__.py  graph.py  health.py  mcp.py  memories.py  migration.py  observations.py  search.py
src/storage/: __init__.py  images.py  paths.py  scopes.py
src/viewer/: index.html
tests/: conftest.py  test_api.py  test_auth.py  test_auto_forget.py  test_cli_context.py  test_context.py  test_debounce.py  test_folder_graph_build.py  test_folder_observe.py  test_forget.py  test_graph.py  test_library.py  test_migration.py  test_normalize.py  test_obs_lookup.py  test_observation_store.py  test_observe_core.py  test_properties.py  test_remember.py  test_route_regressions.py  test_search.py  test_search_service.py  test_security.py  test_timeline.py
(+33 files in other folders)
